adding explicit use of token

--- a/action.yml
+++ b/action.yml
@@ -4,19 +4,19 @@ author: bwhitehead0
 inputs:
   token:
     description: 'The GitHub token'
-    default: ${{ github.token }}
-  run_id:
-    description: 'The run ID'
-    default: ${{ github.run_id }}
-  job:
-    description: 'The job ID'
-    default: ${{ github.job }}
-  repository:
-    description: 'The repository name'
-    default: ${{ github.repository }}
-  server_url:
-    description: 'The GitHub server URL'
-    default: ${{ github.server_url }}
+    default: ${{ secrets.GITHUB_TOKEN }}
+#   run_id:
+#     description: 'The run ID'
+#     default: ${{ github.run_id }}
+#   job:
+#     description: 'The job ID'
+#     default: ${{ github.job }}
+#   repository:
+#     description: 'The repository name'
+#     default: ${{ github.repository }}
+#   server_url:
+#     description: 'The GitHub server URL'
+#     default: ${{ github.server_url }}
   # need to pass in values we can usually get from the ${{ github.* }} context. these are not available inside the action.
 outputs:
   job_id:
