--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ author: bwhitehead0
 inputs:
   token:
     description: 'The GitHub token'
-    default: ${{ secrets.GITHUB_TOKEN }}
+    # default: ${{ secrets.GITHUB_TOKEN }}
 #   run_id:
 #     description: 'The run ID'
 #     default: ${{ github.run_id }}
